--- a/css/quisom.css
+++ b/css/quisom.css
@@ -16,11 +16,59 @@
     height: 80px;
 }
 
+
 .navbar-title {
     color: white;
-    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.8rem;
+    font-weight: bold;
 }
 
+.breadcrumb-container {
+    margin-top: 20px;
+}
 
+.content-section {
+    background: #fff;
+    padding: 40px;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.content-section.middle {
+    /* margin-top: 10px; */
+    margin-left: 30px;
+}
+
+h2, h3 {
+    color: #d9534f;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+p {
+    color: #555;
+    line-height: 1.8;
+    font-size: 1.1rem;
+}
+
+.icon-box {
+    font-size: 3rem;
+    color: #d9534f;
+    margin-bottom: 10px;
+}
+
+.social-icons a {
+    font-size: 1.8rem;
+    transition: transform 0.3s;
+}
+
+.social-icons a:hover {
+    transform: scale(1.2);
+}
 
 
