arreglos desastre roberto

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,19 @@
+/* Estilo para los submenús */
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+    display: none;
+}
+
+.dropdown-submenu:hover > .dropdown-menu {
+    display: block;
+}
+
 .welcome-message {
     color: white;
     margin-right: 15px;
