estropicio roberto arreglado

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@
     height: 100%;
     width: 100%;
     object-fit: contain;
-    background-color: #f8f9fa;
+    background-color: #000000;
 }
 
 .navbar-title {
