--- a/css/styles.css
+++ b/css/styles.css
@@ -180,9 +180,12 @@ footer h5 {
 .card:hover {
     transform: translateY(-5px);
 }
-
 .card-img-top {
     height: 200px;
+    object-fit: cover;
+}
+.card-img-top-plato {
+    height: 500px;
     object-fit: cover;
 }
 
